# SKU_resolver

./: .gitignore  Dockerfile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
analytics/: catalog_analytics.sql  run.py
data/: catalog.csv  gateway_eval_cases.json  inventory.json  known_construct_truncations.json
docs/: ADVERSARIAL_GENERATOR.md  CONVERSATIONAL_GATEWAY_SPEC.md  CONVERSATION_STATE_SPEC.md  DATA_HANDLING_LAYER.md  DECISION_LOG.md  ERP_ADAPTER_HARNESS_SPEC.md  ERP_LIVE_RUNBOOK.md  LIVE_VERIFICATION.md  MATURITY.md  MIGRATION_NOTES.md  NOISE_RESILIENCE_AUDIT.md  OBSERVABILITY.md  PRODUCTION_PLAN.md  PRODUCTION_VALIDATION_GATE.md  README.md  RESOLUTION_LEARNING_LOOP.md  VOCABULARY_SPEC.md  VOICE_AGENT.md  VOICE_EXPERIENCE_DESIGN.md  VOICE_RUNBOOK.md
scripts/: adversarial_live.py  agent_grid.py  elevenlabs_agent.py  eval_admin.py  generate_catalog.py  generate_inventory.py  noise_resilience_audit.py  probe_model_route.py  readiness.py  roundtrip_audit.py
src/erp_harness/: __init__.py  adapter.py  catalog_decode.py  catalog_source.py  discovery.py  drift.py  enforcer.py  explorer.py  gaps.py  grammar_induction.py  harness.py  models.py  onboarding.py  probes.py  profile.py  recon.py  transport.py  verification.py
src/erp_transport/: __init__.py  http_backend.py  live.py  sql_backend.py  web_fetch.py
src/erp_twin/: __init__.py  faults.py  seed.py  twin.py
src/fulfillment/: __init__.py  calendar.py  engine.py
src/gateway/: __init__.py  alias_store.py  answers.py  asr_streaming.py  connector.py  conversation.py  conversation_state.py  customer_db.py  db_adapters.py  disclosure_gate.py  disclosure_say.py  escalation.py  identification.py  intent.py  journal.py  models.py  orchestrator.py  persona.py  pricebook.py  provenance.py  say_guard.py  session.py  shadow.py  shadow_stream.py  spoken.py  tts.py  voice.py  voice_stream.py
src/learning/: __init__.py  eval_battery.py
src/model_provider/: __init__.py  anthropic_provider.py  base.py  client.py  keyring.py  openai_compat.py  routing.py  scripted.py
src/observability/: __init__.py  alerts.py  cost.py  deploy_guard.py  errors.py  logs.py  service_improvement.py  telemetry.py
src/pilot/: __init__.py  capture.py  decision_point.py  labeling.py  shadow.py  stores.py
src/resolution/: __init__.py  chooser.py  retrieval.py  service.py
src/runtime/: __init__.py  agent_brain.py  agent_eval.py  app.py  config.py  custom_llm.py  custom_llm_route.py  endpoint_harness.py  openrouter_model.py  tts_adapters.py  twilio_sig.py  twiml.py  voice_agent.py
src/sku_translator/: __init__.py  catalog_index.py  constructor.py  disambiguator.py  erp_catalog.py  extractor.py  fixture_catalog.py  fuzzy_matcher.py  memory.py  normalizer.py  part_number_parser.py  sqlite_catalog.py  translator.py
src/sku_translator/part_number_parser/: __init__.py  _dispatch.py  _patterns.py  tables.py
tests/: conftest.py  gateway_fixtures.py  harness_fixtures.py  test_agent_brain.py  test_agent_eval.py  test_alias_store.py  test_catalog_source.py  test_conversation_orchestration.py  test_converse_integration.py  test_custom_llm.py  test_custom_llm_route.py  test_db_adapters.py  test_disclosure_gate.py  test_e2e_holistic.py  test_endpoint_harness.py  test_erp_live_wiring.py  test_erp_transport.py  test_eval_battery.py  test_fault_injection.py  test_fulfillment_purity.py  test_gateway_adversarial.py  test_gateway_connector.py  test_gateway_escalation.py  test_gateway_eval_gate.py  test_gateway_golden.py  test_gateway_purity.py  test_gateway_voice.py  test_grammar_induction.py  test_hardening_edge_cases.py  test_harness_c1_manifest.py  test_harness_c2_enforcer.py  test_harness_c3_discovery.py  test_harness_c4_catalog_decode.py  test_harness_c5_probes.py  test_harness_c6_gaps.py  test_harness_c7_profile.py  test_harness_c8_drift.py  test_harness_golden_path.py  test_harness_optimized_invariants.py  test_harness_purity.py  (+31 more)
voice_agent/: SYSTEM_PROMPT.md
voice_agent/eval/: dev.json  eval_lock.json  frozen_holdout.json  frozen_visible.json  reserve.json
