[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sku-translator"
version = "1.0.0"
description = "Deterministic SKU resolution engine: translates free-form human input into verified canonical catalog part numbers. Rules own canonical output; no model calls in the hot path."
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",        # coverage measurement (pytest --cov=src)
    "ruff>=0.6",              # lint + import-order (CI gate)
    "mypy>=1.10",             # static type-check of the resolution core (CI gate)
    "defusedxml>=0.7",
    "fastapi>=0.110",
    "httpx>=0.27",            # FastAPI TestClient dependency (in-process, no network)
    "python-multipart>=0.0.9",  # Twilio form-post parsing in the voice endpoint
]

# The deployed runtime (P4). Install with `.[serve]` to run the API/voice
# server; kept out of the core deps so the library imports without a web stack.
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "sentry-sdk>=2.0",       # error tracking, off unless SENTRY_DSN is set
]
# Tracing backend is OPT-IN and kept out of CI: observability is off/no-op by
# default and imports OTel lazily, so the suite stays fast and deterministic.
# Install with `.[trace]` to enable live spans (SKU_OBS_TRACING=1).
trace = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# PDF catalog ingestion (erp_harness.catalog_source). Optional: the row-parsing
# logic is pure and tested without it; this only enables reading real PDFs.
pdf = [
    "pypdf>=4.0",
]
# Live streaming voice (gateway.asr_streaming AssemblyAIStreamingASR). Optional:
# the Twilio frame parsing + mu-law decode are pure/CI-tested; this only enables
# the real AssemblyAI v3 WebSocket. Exercised by the credential-gated smoke.
voice = [
    "websocket-client>=1.7",
    "certifi>=2024.2",        # CA bundle for TLS on interpreters w/o system certs
]
# LLM provider SDKs for the live seams (anthropic direct; openai serves OpenAI
# AND OpenRouter). CI runs ScriptedProvider, so these are only needed live.
llm = [
    "anthropic>=0.40",
    "openai>=1.40",
]
# On-prem NAV SQL transport (erp_transport.SqlBackend.from_pyodbc). Optional:
# the backend's logic is tested with an injected runner; this only enables a
# real SQL Server connection.
erp = [
    "pyodbc>=5.0",
]
# JS-rendered web catalog ingestion (erp_transport.web_fetch.playwright_fetcher).
# Optional: static pages need no extra; this renders JS-heavy product grids.
web = [
    "playwright>=1.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# src on pythonpath directly: tests must not depend on the editable-install
# .pth hook (macOS UF_HIDDEN on dotfiles can silently disable .pth processing
# under Python 3.14 site.py — see docs/MIGRATION_NOTES.md).
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Correctness (pyflakes), pycodestyle errors/warnings, and import order (isort).
select = ["E", "F", "W", "I"]
# Line length is not enforced: the codebase favours long explanatory comments.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Dev scripts and a few tests adjust sys.path before importing the package, so
# imports legitimately follow executable statements.
"scripts/*" = ["E402"]
"analytics/run.py" = ["E402"]
"tests/test_catalog_source.py" = ["E402"]
"tests/test_ship_date_property.py" = ["E402"]
# Tests favour compact one-line setup (a; b) and the occasional lambda — style
# rules relaxed there; correctness rules (F-series) still apply.
"tests/*" = ["E701", "E702", "E731"]

[tool.mypy]
# Type-gate the correctness-critical packages: the resolution core, fulfillment,
# the chooser/retrieval service, the model-provider seam, observability, and the
# customer-facing gateway (Optional-narrowing done with `if x is not None:`
# guards, never asserts — guards survive `python -O`; see test_gateway_purity).
# Still excluded (deliberately, not incrementally): src/runtime (the FastAPI/
# Twilio web edge) and src/erp_harness (dynamic ERP-shape JSON) — naming the
# boundary beats casting it clean.
files = [
    "src/sku_translator", "src/fulfillment", "src/resolution",
    "src/model_provider", "src/observability", "src/gateway",
]
python_version = "3.10"
# Don't report errors in dependencies outside the listed packages (third-party
# SDKs, the runtime edge).
follow_imports = "silent"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
# Every module uses a try/except import shim (package import, with a bare-name
# fallback for running with src/ on the path); mypy reads that as a redefinition.
disable_error_code = ["no-redef"]

# The live-audio bridge wires an injected session factory (self._open), so its
# session objects are dynamically typed — excluded from the gateway type gate.
[[tool.mypy.overrides]]
module = "gateway.shadow_stream"
ignore_errors = true
